# [#23443] Fix broken layout in Google maps
git-svn-id: file:///Users/oratzes/svn/kunena@4505 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/trunk/2.0/components/com_kunena/template/default/css/kunena.forum.css
+++ b/trunk/2.0/components/com_kunena/template/default/css/kunena.forum.css
@@ -1448,10 +1448,10 @@ PX		EM			PCT			PT
 	overflow: auto;
 	word-wrap:break-word;
 }
-#Kunena td.kmessage-right div,
-#Kunena td.kmessage-left div,
-#Kunena td.kmessage-top div,
-#Kunena td.kmessage-bottom div {
+#Kunena td.kmessage-right div.kmsgbody,
+#Kunena td.kmessage-left div.kmsgbody,
+#Kunena td.kmessage-top div.kmsgbody,
+#Kunena td.kmessage-bottom div.kmsgbody {
 	width: 97%;
 }
 #Kunena div.kmsgbody div.kmsgtext {
